# driftshell

./: .gitignore  ADMIN_GUIDE.md  BREW_WINGET_SETUP.md  DISTRIBUTION.md  LICENSING.md  PRODUCTION_READY.md  RELEASE_STATUS.md  SHIPPING_CHECKLIST.md  WEBSITE_PROMPT.md  WINGET_SUBMISSION.md  drift.spec  install.sh  pyproject.toml
.github/workflows/: build-windows.yml
driftshell/: main.py
driftshell/cli/: config_cmd.py  d_command.py  history.py  license.py  repl.py  run.py  settings.py  setup.py  status.py  undo.py  uninstall.py
driftshell/config/: defaults.py  loader.py  sealed.py
driftshell/core/: executor.py  explainer.py  hardware.py  limiter.py  nlu.py  ollama_daemon.py  orchestrator.py
driftshell/db/: __init__.py  audit.py  migrations.py  schema.py
driftshell/licensing/: __init__.py  features.py  license.py
driftshell/memory/: injector.py  store.py
driftshell/models/: schemas.py
driftshell/safety/: blocklist.py  gate.py  scorer.py
driftshell/snapshots/: capture.py  restore.py
driftshell/tools/: __init__.py  license_generator.py
driftshell/utils/: console.py  paths.py
manifests/a-elhaag/driftshell/: 1.0.0.yaml
scripts/: prepare-release.sh  update-winget-sha256.sh
tests/: conftest.py  test_blocklist.py  test_executor.py  test_gate.py  test_hardware.py  test_limiter.py  test_memory.py  test_nlu.py  test_ollama_daemon.py  test_scorer.py
