[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftshell"
version = "0.1.0"
description = "Plain English → shell commands via local LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["cli", "shell", "llm", "ollama", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "ollama>=0.3",
    "psutil>=5.9",
    "rich>=13.0",
    "tomli-w>=1.0",
    "thefuzz>=0.22",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
drift = "driftshell.main:app"
d = "driftshell.cli.d_command:app"

[project.urls]
Homepage = "https://driftshell.dev"
Repository = "https://github.com/driftshell/driftshell"

[tool.hatch.build.targets.wheel]
packages = ["driftshell"]
